# csmaca-simulation

./: .gitignore  CMakeLists.txt  README.md
data/: output.csv
data/finalData/epsilon/: EpsilonMABEGreedy.csv
data/finalData/nodes/: MABEGreedy.csv  MABUCB1.csv  QLearningDynamicAlpha.csv  QLearningFixedAlpha.csv  baseline.csv
data/finalData/pGen/: MABEGreedy.csv  MABUCB1.csv  QLearningDynamicAlpha.csv  QLearningFixedAlpha.csv  baseline.csv
include/: Agent.hpp  Channel.hpp  Environment.hpp  Rng.hpp
python/: elaborate.py  plot.py
python/result/epsilon/: EpsilonMABEGreedyAVERAGED.csv
python/result/nodes/: MABEGreedyAVERAGED.csv  MABUCB1AVERAGED.csv  QLearningDynamicAlphaAVERAGED.csv  QLearningFixedAlphaAVERAGED.csv  baselineAVERAGED.csv
python/result/pGen/: MABEGreedyAVERAGED.csv  MABUCB1AVERAGED.csv  QLearningDynamicAlphaAVERAGED.csv  QLearningFixedAlphaAVERAGED.csv  baselineAVERAGED.csv
src/: Agent.cpp  Channel.cpp  Environment.cpp  main.cpp
